<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekBar="http://schemas.android.com/apk/res-auto">

    <Preference
        android:layout="@layout/view_for_preference"
        android:selectable="false" />

    <PreferenceCategory android:title="@string/title_video_category">

        <com.quickblox.sample.videochat.conference.java.views.ListPreferenceCompat
            android:defaultValue="@string/pref_resolution_default"
            android:dialogTitle="@string/pref_resolution_dlg"
            android:entries="@array/videoResolutions"
            android:entryValues="@array/videoResolutionsValues"
            android:key="@string/pref_resolution_key"
            android:summary="%s"
            android:title="@string/pref_resolution_title" />

        <com.quickblox.sample.videochat.conference.java.views.SeekBarPreference
            android:defaultValue="@string/pref_startbitratevalue_default"
            android:key="@string/pref_startbitratevalue_key"
            android:max="@integer/pref_startbitratevalue_max_value"
            android:summary="%s"
            android:title="@string/pref_startbitratevalue_title"
            seekBar:min="@integer/pref_startbitratevalue_min_value"
            seekBar:stepSize="@integer/pref_startbitratevalue_step_size" />

        <com.quickblox.sample.videochat.conference.java.views.SeekBarPreference
            android:defaultValue="@string/pref_frame_rate_default"
            android:key="@string/pref_frame_rate_key"
            android:max="@integer/pref_frame_rate_max_value"
            android:summary="%s"
            android:title="@string/pref_frame_rate_title"
            seekBar:min="@integer/pref_frame_rate_min_value"
            seekBar:stepSize="@integer/pref_frame_rate_stepSize" />

        <!--<com.quickblox.sample.videochat.conference.java.view.ListPreferenceCompat-->
            <!--android:defaultValue="@string/pref_videocodec_default"-->
            <!--android:dialogTitle="@string/pref_videocodec_dlg"-->
            <!--android:entries="@array/videoCodecs"-->
            <!--android:entryValues="@array/videoCodecsValues"-->
            <!--android:key="@string/pref_videocodec_key"-->
            <!--android:summary="%s"-->
            <!--android:title="@string/pref_videocodec_title" />-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_call_settings_category">

        <CheckBoxPreference
            android:defaultValue="@string/pref_hwcodec_default"
            android:key="@string/pref_hwcodec_key"
            android:title="@string/pref_hwcodec_title" />
    </PreferenceCategory>

    <Preference
        android:layout="@layout/preference_version"
        android:selectable="false" />
</PreferenceScreen>